traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:26: error: not found: value ordMadx
      case (i,j) if diag>=(ordMax-1) && i==(absMax-1) => setPos(diag+1-ordMax,ordMadx-1);diag=diag+1
                                                                              ^